--- a/src/app/pages/personalrrhh/monitoreswc/monitoreswc.component.html
+++ b/src/app/pages/personalrrhh/monitoreswc/monitoreswc.component.html
@@ -46,7 +46,7 @@
                                 <th>Correo Electrónico</th>
                                 <th>Tel. Celular</th>
                                 <th>Entidad Bancaria</th>
-                                <th># Cuenta</th>
+                                <th># Cuenta Banco</th>
                                 <th class="text-center">Estado</th>
                                 <th class="text-center">Acción</th>
                             </tr>
@@ -85,12 +85,12 @@
                 </div>
 
                 <div class="text-center" *ngIf="mostrarBotones">
-                    <button (click)="cambiarPagina(-10)" class="btn btn-secondary">
+                    <button (click)="cambiarPagina(-25)" class="btn btn-secondary">
                         <i class="fa fa-backward"></i>&nbsp;
                         Anteriores
                     </button> &nbsp; &nbsp; &nbsp;
 
-                    <button (click)="cambiarPagina(10)" class="btn btn-secondary">
+                    <button (click)="cambiarPagina(25)" class="btn btn-secondary">
                         Siguientes &nbsp;
                         <i class="fa fa-forward"></i>
                     </button>
