--- a/src/app/pages/procesos/pqrs/pqrs.component.html
+++ b/src/app/pages/procesos/pqrs/pqrs.component.html
@@ -17,7 +17,7 @@
                         <tr>
                             <td style="text-align:left">
                                 <button [routerLink]="['/dashboard/nuevoPQRS']" type="button" class="btn waves-effect waves-light btn-rounded btn-primary">
-                                <i class="fa fa-user-plus"></i> Crear PQRS </button>
+                                <i class="fa fa-puzzle-piece"></i> Crear Nuevo PQRS </button>
                             </td>
 
                             <td style="text-align:center">
@@ -37,13 +37,14 @@
                         <thead>
                             <tr>
                                 <th class="w50"></th>
+                                <th class="text-center">Detalles</th>
                                 <th class="text-center">Tipo PQRS</th>
                                 <th class="text-center">Prioridad</th>
                                 <th class="text-center">Estado</th>
                                 <th>Ocurrió el</th>
                                 <th class="text-center">Sede</th>
                                 <th>Asignado a</th>
-                                <th>Registrado por</th>
+                                <th>Usuario que registró</th>
                                 <th class="text-center">Fecha Registró</th>
                                 <th class="text-center">Acción</th>
                             </tr>
@@ -53,7 +54,8 @@
                                 <td class="text-center">
                                     <img [src]="pqr.imagenUrl" class="avatar-w40 cursor" alt="Evidencia de PQRS" (click)="abrilModalImagen( pqr )">
                                 </td>
-                                <td><small><a href="" (click)="verDetallesPQRS(pqr)" data-toggle="modal" data-target="#datosPQRSModal">{{pqr.tipo.tipopqrsDesc}}</a></small></td>
+                                <td><small><a href="" (click)="verDetallesPQRS(pqr)" data-toggle="modal" data-target="#datosPQRSModal">Ver más...</a></small></td>
+                                <td><small>{{pqr.tipo.tipopqrsDesc}}</small></td>
                                 <td class="text-center">
                                     <span *ngIf="pqr.prioridad === 'URGENTE'" class="label label-primary">URGENTE</span>
                                     <span *ngIf="pqr.prioridad === 'ALTA'" class="label label-danger">ALTA</span>
@@ -67,17 +69,17 @@
                                     <span *ngIf="pqr.estado === 'RESUELTO'" class="label label-success">RESUELTO</span>
                                 </td>
                                 <td><small>{{pqr.fechaOcurrencia | date}}</small></td>
-                                <td class="text-center {{pqr.sede.stylePre}}">{{pqr.sede.nombre}}</td>
+                                <td class="text-center text-uppercase font-weight-bold">{{pqr.sede.nombre}}</td>
                                 <td><small>{{pqr.usuarioAsignado.nombre}}</small></td>
                                 <td><small>{{pqr.usuarioRegistro.nombre}}</small></td>
                                 <td class="text-center"><small>{{pqr.fechaRegistro | date}}</small></td>
                                 <td class="text-nowrap text-center">
                                     <a class="cursor" title="Actualizar estado de la PQRS" data-toggle="tooltip" data-original-title="Actualizar estado de la PQRS" (click)="actualizarEstadoPQRS(pqr)">
-                                        <i class="fa fa-pencil text-inverse m-r-10"></i>
+                                        <i class="fa fa-reply text-inverse m-r-10"></i>
                                     </a>
                                     &nbsp; &nbsp;
                                     <a class="cursor" title="Eliminar definitivamente la PQRS" data-toggle="tooltip" data-original-title="Eliminar definitivamente la PQRS" (click)="eliminarPQRS(pqr)">
-                                        <i class="fa fa-trash text-danger"></i>
+                                        <i class="fa fa-trash-o text-danger"></i>
                                     </a>
                                 </td>
                             </tr>
@@ -86,12 +88,12 @@
                 </div>
 
                 <div class="text-center" *ngIf="mostrarBotones">
-                    <button (click)="cambiarPagina(-20)" class="btn btn-secondary">
+                    <button (click)="cambiarPagina(-25)" class="btn btn-secondary">
                         <i class="fa fa-backward"></i>&nbsp;
                         Anteriores
                     </button> &nbsp; &nbsp; &nbsp;
 
-                    <button (click)="cambiarPagina(20)" class="btn btn-secondary">
+                    <button (click)="cambiarPagina(25)" class="btn btn-secondary">
                         Siguientes &nbsp;
                         <i class="fa fa-forward"></i>
                     </button>
